--- a/talent-tool-frontend/public/index.html
+++ b/talent-tool-frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!--keycloak adapter -->
-    <script src="http://localhost:8080/auth/js/keycloak.js"></script>
+    <!-- <script src="http://localhost:8080/auth/js/keycloak.js"></script> -->
 
 
     <meta charset="utf-8">
